instructions.Instructions.scala.error
Erreur de compilation :
Instructions:14: error: too many arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit
setCouleurBrosse(r=192,g=192,b=192) 
                ^