instructions.Instructions.scala.code
baisseBrosse()
avance(2)
droite()
avance(2)
droite()
avance(2)
droite()
avance(2)
droite()
avance()
droite()
leveBrosse()
avance()
setCouleurBrosse(r=192,g=192,b=192)